<resources>
    <string name="app_name">TURAPP</string>
    <string name="instillinger">Innstillinger</string>
    <string name="avbryt">AVBRYT</string>
    <string name="ok">OK</string>
    <string name="reisested">Reisested</string>
    <string name="hentested">Hentested</string>
    <string name="mobilnummer">Mobilnummer</string>
    <string name="navn">Navn</string>
    <string name="ugyldige_verdier">Ugyldige verdier</string>
    <string name="ny_tur">NY TUR</string>
    <string name="mine_turer">Mine turer</string>
    <string name="s_k_turer">Søk turer</string>
    <string name="favoritt_steder">Favorittsteder</string>
    <string name="title_activity_maps">Map</string>
    <string name="kart_feil">Kan ikke starte kart</string>
    <string name="avreisedato">Avreisedato</string>
    <string name="avreisetidspunkt">Avreisetidspunkt</string>
    <string name="ledige_plasser">Ledige plasser</string>
    <string name="avreise">Avreise:</string>
    <string name="klikk_for_sette_avreise">Klikk for å sette avreise</string>
    <string name="destinasjon">Destinasjon:</string>
    <string name="klikk_for_sette_destinasjon">Klikk for å sette destinasjon</string>
    <string name="registrer">Registrer</string>
    <string name="fant_ikke_pos">Fant ikke din posisjon, setter til USN i Bø</string>
    <string name="kanseller">Kanseller</string>
    <string name="sjafor">Sjåfør</string>
    <string name="passasjer">Passasjer</string>
    <string name="passasjerer">Passasjerer</string>
    <string name="avlys">Avlys</string>
    <string name="meld_av">Meld av</string>
    <string name="velg_fra_favoritter">Velg fra favoritter</string>
    <string name="velg_fra_kart">Velg fra kart</string>
    <string name="ikke_funnet">N/A adresse, lagret posisjoner.</string>
    <string name="feil">En feil har inntruffet</string>
    <string name="lagret_verdier">Lagret verdier!</string>
    <string name="e_post">E-post:</string>
    <string name="trenger_id">Du må legge inn informasjon i innstillinger før du kan bruke denne funksjonen</string>
    <string name="feil_lesing">Feil ved lesing av data</string>
    <string name="fant_ikke_bruker">Fant ikke brukeren</string>
    <string name="passasjerliste_feil">Klarte ikke hente passasjerliste</string>
    <string name="slettet_fra_tur">Slettet fra tur!</string>
    <string name="kun_ett_sted">Du kan kun ha ett favorittsted</string>
    <string name="nytt_sted">Lagt til nytt favorittsted: </string>
    <string name="slettet_sted">Slettet favorittsted!</string>
    <string name="fant_ingen_turer">Fant ingen turer!</string>
    <string name="meld_på">Meld på</string>
    <string name="meldt_pa">Meldt på tur!</string>
    <string name="slettet_tur">Slettet tur!</string>
</resources>
